feat: implement validation engine — field, OCR confidence, line-item, invoice, and duplicate validators